player.css
/* ... */
.video-js:hover .vjs-big-play-button,.video-js .vjs-big-play-button:focus,.video-js .vjs-big-play-button:active {
    background-color: #ff0009
}

.video-js .vjs-loading-spinner {
    border-color: #cc181e
}

.video-js .vjs-control-bar2 {
    background-color: #000000
}

.video-js .vjs-control-bar {
    background-color: rgba(0,0,0,0.3) !important;
    color: #ffffff;
    font-size: 12px
}

.video-js .vjs-play-progress,.video-js  .vjs-volume-level {
    background-color: #cc181e
}

.video-js .vjs-load-progress {
    background: rgba(255,255,255,0.3);
}

.vjs-playback-rate .vjs-playback-rate-value {
    pointer-events: none;
    font-size: 14px;
    line-height: 2;
    text-align: center;
}

.vjs-playback-rate > .vjs-menu-button, .vjs-playback-rate .vjs-playback-rate-value {
    position: absolute;
    top: 3px;
    left: 0;
    width: 100%;
    height: 100%;
    font-size: 14px;
}

      .vjs-menu {
        font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
      }
      .vjs-menu-content {
        overflow: inherit;
      }
      .vjs-menu-item {
        text-align: right!important;
      }
      .vjs-settings-sub-menu-value,
      .vjs-settings-sub-menu-title {
        display: inline-block;
        padding: 0 5px;
      }
      /* .vjs-menu-button-popup > .vjs-menu {
        width: 17em;
        left: -10em;
      }
      .vjs-menu-button-popup .vjs-settings-sub-menu .vjs-menu {
        left: -10em;
      } */

        .vjs-menu-content {
          bottom: -1.5em;}
          li {
            font-size: 1em;
          }
         */
        .vjs-menu-item {
          text-align: center;
        }

  
    .vjs-settings-sub-menu-title {
      width: 8em;
      text-transform: initial;
    }

    .vjs-settings-sub-menu{
      width: 200px;
      position: fixed;
    }


    .vjs-settings-menu.vjs-icon-cog.vjs-menu-button.vjs-menu-button-popup.vjs-button+.vjs-menu{
      width: 30%;
      /* display: inherit; */
      position: fixed;
      float: right;
      right: 0px;
      left: auto;
    }
.vjs-settings-menu{
  font-size: 18px!important;
}

    .vjs-menu-button.vjs-menu-button-popup.vjs-control.vjs-button { 
    font-size: 14px;
    width: 3.5em;
    }

    .vjs-menu-button-popup .vjs-menu .vjs-menu-content {
      background-color: #2B333F;
      background-color: rgba(0, 0, 0, 0.85);
      position: absolute;
      width: 100%;
      bottom: 1.3em;
      max-height: 15em;
  }

  .video-js .vjs-fullscreen-control {
    cursor: pointer;
    -webkit-box-flex: none;
    -moz-box-flex: none;
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
}

.vjs-menu-button.vjs-menu-button-popup.vjs-control.vjs-button {
  font-size: 14px;
}

.video-js .vjs-live-control {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: flex-start;
  -webkit-align-items: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex: auto;
  -moz-box-flex: auto;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  font-size: 1em;
  line-height: 3em;
  visibility: collapse;
  display: block!important;
}

